# b2listen

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  b2listen.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: publish-auto.yml  publish-manual.yml  python-package.yml
b2listen/: __main__.py  b2listen.py  server.py  subscription.py
